# garlic

./: .gitignore  Cargo.toml
showcase/: Cargo.toml  index.html
showcase/src/: main.rs
src/: detect_resize.rs  direction.rs  drag.rs  function.rs  interval.rs  lib.rs  list.rs  order.rs  search_query.rs  sortable_list.rs  spacer.rs  style.rs  text_input.rs
