[package]
name = "garlic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["showcase"]

[dependencies]
implicit-clone = "0.3"
js-sys = "0.3"
smallvec = "1.10"
yew = "0.20"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
	"CssStyleDeclaration",
	"DomRect",
]
